# Kaam

./: .gitignore  AGENTS.md  KAAM_Setu_AI_Best_Workflow.md  KAAM_Setu_AI_Complete_PRD.md  KAAM_Setu_AI_Complete_Practical_Workflow.md  KAAM_Setu_AI_Final_10_10_Master_Description.md  KAAM_Workflow.md - Google Docs.md  KAAM_v2_Complete.md - Google Docs.md  README.md
.specify/: feature.json  init-options.json  integration.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/jobs/: anomaly_job.py  income_gap_job.py  merkle_job.py  scheduler.py  score_job.py
backend/app/models/: __init__.py  anomaly.py  attendance.py  contractor.py  dispute.py  insurance.py  kaam_score.py  loan.py  merkle.py  site.py  wage_slip.py  worker.py
backend/app/routers/: anomaly.py  attendance.py  contractor.py  dispute.py  inspector.py  wage_slip.py  worker.py
backend/app/schemas/: anomaly.py  attendance.py  common.py  contractor.py  dispute.py  inspector.py  wage_slip.py  worker.py
backend/app/services/: anomaly_detector.py  crypto.py  geofence.py  id_generator.py  kaam_score.py  wage_calculator.py
backend/app/stubs/: __init__.py  aadhaar.py  digilocker.py  whatsapp.py
backend/tests/: test_crypto.py  test_geofence.py  test_registration.py  test_wage_calculator.py
dashboard/: eslint.config.js  index.html  package-lock.json  package.json
kaam-pass-pwa/: index.html  package-lock.json  package.json  vite.config.js
(+84 files in other folders)
