[project]
name = "kaam-backend"
version = "0.1.0"
description = "KAAM Finance — Compliance OS for India's Construction Supply Chain"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.models.*"
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = "app.auth"
disable_error_code = ["no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
